# jupyterkernelgen

./: .gitignore  README.md  pyproject.toml  setup.py
jupyterkernelgen/: __init__.py  jupyterkernelgen.py
src/jupyterkernelgen/: __init__.py  __main__.py  jupyterkernelgen.py
