[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterkernelgen"
version = "0.1.0"
authors = [
    {name="Jacob Janzen", email="jacob.janzen@phac-aspc.gc.ca"},
    {name="Philip Mabon", email="philip.mabon@phac-aspc.gc.ca"},
]
description = "A guided tool for creating jupyter kernels"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
]

[project.scripts]
jupyterkernelgen = "jupyterkernelgen.jupyterkernelgen:main"

[project.urls]
"Homepage" = "https://github.com/phac-nml/jupyterkernelgen"
"Bug Tracker" = "https://github.com/phac-nml/jupyterkernelgen/issues"
